--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
-  "name": "ids-astro",
+  "name": "ai-catalog-cis",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "build": "astro build && npx pagefind --site dist",
     "preview": "astro preview",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:properties": "vitest run --testPathPattern=property",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.18"
+    "@astrojs/markdoc": "^0.11.4",
+    "@astrojs/mdx": "^3.1.9",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/sitemap": "^3.2.1",
+    "@keystatic/astro": "^5.0.1",
+    "@keystatic/core": "^0.5.36",
+    "astro": "^4.16.18",
+    "pagefind": "^1.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "fast-check": "^3.23.1",
+    "jsdom": "^25.0.1",
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.6"
   }
 }
